# threadrunner

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md
.cursor/: architecture.md  context.md  instructions.md  project.md
.github/workflows/: README.md  bump-formula.yml  ci.yml  release.yml
Formula/: threadrunner.rb
crates/cli/: Cargo.toml  README.md
crates/cli/src/: client.rs  config.rs  frame.rs  main.rs
crates/cli/tests/: handshake.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  ipc.rs  lib.rs  llama_backend.rs  model.rs
crates/core/tests/: error.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: config.rs  daemon.rs  frame.rs  lib.rs  main.rs  state.rs
crates/daemon/tests/: idle_log.rs  smoke.rs
docs/: README.md  architecture.md  setup.md
models/: README.md
packaging/: README.md
scripts/: README.md
test-release/: threadrunner
