[package]
name = "threadrunner"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow          = "1"
clap            = { version = "4", features = ["derive"] }
serde_json      = "1"
tokio           = { workspace = true, features = ["net", "process", "rt-multi-thread", "signal"] }
threadrunner-core = { path = "../core" }
directories     = "5"          # for locating home dir 

[dev-dependencies]
tempfile        = "3" 