[package]
name = "threadrunner-core"
version.workspace = true
edition.workspace = true

[features]
default = ["dummy"]
dummy   = []          # keeps DummyBackend
llama   = ["llama_cpp"]

[dependencies]
llama_cpp = { version = "0.3.2", optional = true }
anyhow = "1.0"
tokio.workspace = true
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] } 