[package]
name = "threadrunner-daemon"
version.workspace = true
edition.workspace = true

[features]
default = ["dummy"]
dummy = ["threadrunner-core/dummy"]
llama = ["threadrunner-core/llama"]

[dependencies]
anyhow = "1"
dirs = "5"
serde_json = "1"
tokio = { workspace = true, features = ["net", "time", "signal"] }
threadrunner-core = { path = "../core", features = [] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender  = "0.2"
thiserror         = { workspace = true }

[dev-dependencies]
tempfile = "3" 